syntax = "proto3";

package misc;

import "users.proto";

service Misc {
    rpc Event(EventRequest) returns (EventResponse);
    rpc TestP2P(TestP2PRequest) returns (TestP2PResponse);
}

message EventRequest {}
message EventResponse {
    InviteEvent invite = 1;
}

message InviteEvent {
    int64 id = 1;
    users.User sender = 2;
    bool force_join = 3;
}

message TestP2PRequest {
    bytes challenge = 1;
}
message TestP2PResponse {
    bytes challenge = 2;
}